# cyfrif

./: .gitignore  CONTRIBUTING.md  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
data/: Application.css  com.github.aimproxy.PomodoroApp.appdata.xml  com.github.aimproxy.PomodoroApp.appdata.xml.in  com.github.aimproxy.PomodoroApp.desktop  com.github.aimproxy.PomodoroApp.desktop.in  com.github.aimproxy.cyfrif.appdata.xml.in  com.github.aimproxy.cyfrif.desktop.in  com.github.aimproxy.cyfrif.gschema.xml  com.github.aimproxy.tomato.appdata.xml.in  com.github.aimproxy.tomato.desktop.in  css.gresource.xml  meson.build
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.aimproxy.cyfrif.pot  nl.po
po/extra/: POTFILES  extra.pot  nl.po
src/: Application.vala  MainWindow.vala  Service.vala  State.vala  TimeOut.vala
src/Configs/: Settings.vala
src/Interfaces/: Source.vala  Timer.vala
src/Services/: Service.vala  State.vala  TimeOut.vala  TimerLabel.vala
src/Windows/: MainWindow.vala
